# UserSU

./: .gitignore  .gitmodules  README.md  flake.nix  justfile
.github/workflows/: build_release.yml
ManagerApp/: flake.nix  gradle.properties  settings.gradle.kts
ManagerApp/app/: build.gradle.kts  proguard-rules.pro
ManagerApp/app/src/main/: AndroidManifest.xml
ManagerApp/app/src/main/java/me/usersu/: MainActivity.kt  UserSUCommandRunner.kt  UserSUInstaller.kt
ManagerApp/app/src/main/java/me/usersu/ui/theme/: Color.kt  Theme.kt  Type.kt
ManagerApp/app/src/main/res/values/: strings.xml  themes.xml
ManagerApp/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
ManagerApp/gradle/: libs.versions.toml
MinSuki/: Cargo.toml
MinSuki/src/: lib.rs  main.rs  preload.rs
bootfs/: Cargo.toml
bootfs/src/: main.rs
kernel/: SuperUser.c  build.sh
sandbox/: MakeTarball.py
sandbox/rootfs/: README.md  main.py  pyproject.toml
spoofed-su/: Cargo.toml
spoofed-su/src/: ptrace.rs  state.rs  types.rs
spoofed-su/src/tools/: spoofer.rs
system/android/: build.gradle  create.apk.sh  gradle.properties  settings.gradle
system/android/main/: AndroidManifest.xml
system/android/main/java/me/usersu/: InitActivity.java  ManagerActivity.kt  SimpleExtractActivity.java  TarballExtractActivity.java  TarballExtractActivity.kt  TerminalActivity.java
system/suxz/: Cargo.toml
system/suxz/src/: main.rs
system/sysless-root/: Cargo.toml
system/sysless-root/src/: Su.rs  main.rs
system/sysless-root/src/clang++/: libfakeroot.cxx
userspace/: rootd.cc
userspace/usud/: Cargo.toml
userspace/usud/android/: AndroidManifest.xml  ApplicationService.java
userspace/usud/android/com/google/android/: install
userspace/usud/kotlin/: AndroidApplicationDirectory.kt  MainActivity.kt  build.bat  build.gradle  build.gradle.kts  settings.gradle.kts
userspace/usud/kotlin/gradle/wrapper/: gradle-wrapper.properties
userspace/usud/kotlin/src/main/: AndroidManifest.xml
userspace/usud/src/: TemPRoot.rs  build_android.rs  main.rs  su.rs
userspace/usud/src/clang/: fakeroot.c
userspace/usud/src/scripts/: BuildFakeRoot.rhai  CreateTempRoot.rs
userspace/usud/system/: installUsud.sh
