[package]
name = "minsuki"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Minimal SuperUser emulation layer"

[[bin]]
name = "minsuki"
path = "src/main.rs"

[lib]
name = "libminsuki"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
nix = { version = "0.27", features = ["process", "signal", "ptrace", "user"] }
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1