[package]
name = "usersu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.48"
cmake = "0.1.54"
libc = "0.2"
nix = { version = "0.27", features = ["user"] }

[[bin]]
name = "build-android"
path = "src/build_android.rs"
[[bin]]
name = "su"
path = "src/su.rs"

[[bin]]
name = "usersu"
path = "src/main.rs"

[[bin]]
name = "troot"
path = "src/TempPRoot.rs"

